chore: ffm api 3rd preview changes